--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ModernWMS</title>
+  <link rel="icon" href="./src/assets/img/webLogoMini.png" />
 </head>
 
 <body>
